src/force-app/main/default/objects/copado__Environment__c/fields/copado__Deployment_Automation_Override__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment_Automation_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an Automation Template to override the default Deployment Behaviour defined in the Pipeline</inlineHelpText>
    <label>Deployment Automation Override</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Environments (Deployment Automation Override)</relationshipLabel>
    <relationshipName>DeploymentAutomationEnvironments</relationshipName>
    <type>Lookup</type>
</CustomField>