src/force-app/main/default/objects/copado__Environment__c/fields/copado__Promotion_Override__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an Automation Template to override the default Promotion Behaviour defined in the Pipeline</inlineHelpText>
    <label>Promotion Automation Override</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Environments (Promotion Automation Override)</relationshipLabel>
    <relationshipName>PromotionAutomationsEnvironments</relationshipName>
    <type>Lookup</type>
</CustomField>